2002-11-06  Richard Williamson  <rjw@apple.com>

        More work on rendering scripts. Now most complex scripts render correctly.
        Working new features include:
        bidi, diacriticals, cursive forms, and arabic ligatures.
        Selection of text rendered in these scripts, is however, not working. 
        Also, line height is incorrect when renderering combined below glyphs.
        ajami is, sadly, horrendously broken.

        * Misc.subproj/WebUnicode.m:
        (glyphVariantLogical):
        (shapedString):
        * WebCoreSupport.subproj/WebTextRenderer.m:
        (-[WebTextRenderer drawCharacters:stringLength:fromCharacterPosition:toCharacterPosition:atPoint:withPadding:withTextColor:backgroundColor:rightToLeft:]):
        (-[WebTextRenderer _floatWidthForCharacters:stringLength:fromCharacterPosition:numberOfCharacters:withPadding:applyRounding:attemptFontSubstitution:widths:fonts:glyphs:numGlyphs:]):

2002-11-06  John Sullivan  <sullivan@apple.com>

        * Bookmarks.subproj/WebBookmark.m:
        (+[WebBookmark bookmarkOfType:]):
	made this handle WebBookmarkTypeProxy

2002-11-06  Darin Adler  <darin@apple.com>

	- fixed bug that affected BinHex-encoded files with no resource fork

        * Downloads.subproj/WebBinHexDecoder.m:
        (-[WebBinHexDecoder decodeData:dataForkData:resourceForkData:]):
	Don't decode the resource fork unless done with the data fork.

        * Downloads.subproj/WebDownloadHandler.m: (-[WebDownloadHandler receivedData:]):
	Set the forks to nil before calling through.

2002-11-06  Darin Adler  <darin@apple.com>

        * Downloads.subproj/WebMacBinaryDecoder.m: (+[WebMacBinaryDecoder canDecodeHeaderData:]):
	Fix == 129 check that was supposed to be <= 129.

        * English.lproj/StringsNotToBeLocalized.txt: Update for recent changes.

2002-11-06  Darin Adler  <darin@apple.com>

        * Downloads.subproj/WebBinHexDecoder.m: (-[WebBinHexDecoder decodeIntoBuffer:size:]):